@@ -1,4 +1,5 @@
  <root-tag myattr="true">
    <inner-tag someattr="val">Text</inner-tag>
    <a2><a3><a4>false</a4></a3></a2>
+   <cdatatag><![CDATA[<test>]]></cdatatag>
  </root-tag>
