@@ -172,6 +172,8 @@ Fixed bugs:
 * <fixcrlf> will now create the parent directories for the destination
   files if necessary.  Bugzilla Report 20840.
 
+* <xmlproperty> now handles CDATA sections. BugZilla Report 17195  
+  
 Other changes:
 --------------
 * Six new Clearcase tasks added.
@@ -434,6 +436,9 @@ Other changes:
 
 * <mapper> has an "unpackage" mapper
   Bugzilla Report 18908
+  
+* Added <scriptdef> task allowing tasks to be defined using any BSF-supported
+  scripting language.  
 
 Changes from Ant 1.5.2 to Ant 1.5.3
 ===================================
